Closed
Bug 162555
Opened 22 years ago
Closed 22 years ago
Browser hangs when accessing website (OEM Branch)
Categories
(SeaMonkey :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: martinlawyer, Assigned: jerry.tan)
References
()
Details
(Keywords: fixedOEM)
Attachments
(1 file, 1 obsolete file)
921 bytes,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
1) Pull mozilla source from NETSCAPE_7_0_OEM_BRANCH
2) Build mozilla, optimized
3) Remove (or move) .mozilla and .netscape home directories
4) Bring up browser using new default profile
5) Enter cnn.com in the location bar
6) Entire browser window hangs
I've seen similar results going to netscape.com as well. Simpler pages (like
mozilla.org or google.com seem to work ok).
It is reported that the debug/non-opt builds also fail similarly, and that the
problem is also affecting Linux builds done on the OEM branch.
Builds done during the day on August 8th do not have this problem, so it is
related to a checkin done late 8/8 or after.
Reporter | ||
Updated•22 years ago
|
QA Contact: asa → rtakeda
Whiteboard: branchOEM
Updated•22 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Reporter | ||
Comment 1•22 years ago
|
||
I have found that if I roll back the change to htmlparser/src/CNavDTD.cpp (Rev
3.381.2.6.6.1 -> 3.381.2.6), things get better.
Reporter | ||
Comment 2•22 years ago
|
||
I have now tried rolling back this one change on both HPUX and Linux, and in
both cases, the problem went away.
I am sorry for my fault.
I check in it for two bugs,
but make something wrong with patch.
Assignee: martinl → jerry.tan
Attachment #95198 -
Attachment is obsolete: true
sorry for my mistake.
I make a patch for current OEM branch.
I think it still need jdunn's approval, but dont need r and sr.
approved, lets get this into the branch to clean things up
Whiteboard: branchOEM → branchOEM+
fyi, this patch fixes the problem I am seeing on hpux11 with www.cnn.com
fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Whiteboard: branchOEM+ → branchOEM+ fixedOEM
Comment 9•22 years ago
|
||
BUG FIX VERIFICATION:
Removed .mozilla subdirectory. Logged in as default profile (i.e., cancelled
out of "Current Member Sign In" registration). After browser started with
"Welcome Set-up Page", entered cnn.com url. CNN page came up fine, browser
functioning as expected. Netscape.com also comes up fine.
CONCLUSION:
Bug has been fixed - Marking as VERIFIED - FIXED
VERSION: 7.0
BUILD: 20020823 and 20020827, both OEM builds.
MACHINE: venice and assisi
O.S.: HPUX 11.00 and 11i
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•