bug 162555, fix the bug caused by wrong checkin a=jdunn