mozilla/parser/htmlparser/src/CNavDTD.cpp
@@ -494,7 +494,7 @@ nsresult CNavDTD::BuildModel(nsIParser* aParser,nsITokenizer* aTokenizer,nsIToke
           mTokenizer->PushTokenFront(theToken);
         }
           //if the content model is empty, then begin by opening <html>...
-        theToken=NS_STATIC_CAST(CStartToken*,mTokenAllocator->CreateTokenOfType(eToken_start,eHTMLTag_html,NS_LITERAL_STRING("html")));
+        theToken = (CStartToken*)mTokenizer->GetTokenAt(0);
         if (theToken) {
           eHTMLTags theTag = (eHTMLTags)theToken->GetTypeID();
           eHTMLTokenTypes theType = eHTMLTokenTypes(theToken->GetTokenType());
